fix overflow problem

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,10 +7,9 @@
   scroll-behavior: smooth;
 }
 
-html {
-  font-size: 62.5%;
-}
-
+html,
 body {
+  font-size: 62.5%;
   font-family: "Kalam", "Noto Sans TC", sans-serif;
+  overflow-x: hidden;
 }
