--- a/sass/base/_typograpy.scss
+++ b/sass/base/_typograpy.scss
@@ -4,6 +4,6 @@
 
   &:hover {
     text-shadow: 0 5px 10px rgba($color-black, 0.4);
-    transform: skewX(5deg) skewY(-7deg);
+    transform: scale(1.2);
   }
 }
