--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,6 +1,6 @@
 .technology {
   position: relative;
-  height: 60rem;
+  height: 55rem;
   width: 100%;
   margin-top: -14vh;
   z-index: 0;
@@ -65,7 +65,7 @@
 
   &__dotBox {
     position: absolute;
-    bottom: 10rem;
+    bottom: 3rem;
     width: 100%;
 
     &__dot {
@@ -99,6 +99,13 @@
 
 .projectSection {
   padding-top: 7rem;
-  padding-bottom: 40rem;
-  background: #eee;
+  padding-bottom: 5rem;
+  background-image: linear-gradient(
+      to bottom,
+      rgba($color-white, 0.4),
+      rgba($color-white, 0.4)
+    ),
+    url(./images/bgImage.png);
+  background-size: cover;
+  background-position: center center;
 }
